fix: style issues on small devices

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,17 +14,17 @@
     &__container{
       width: 100%;
     }
-
     &__brand{
-      font-size: 40px;
+      font-size: 20px;
       display: flex;
       justify-content: center;
+      align-items: center;
       cursor: pointer;
     }
 
     &__link {
       color: var(--pokemon-black);
-      font-size: 30px;
+      font-size: 15px;
       transition: 0.5s;
       text-decoration: none;
       &:first-child{
